# casr-gui

./: CHINESE_PATH_FIX.md  DEV_NOTES.md  README.en.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: convert.rs  mod.rs  providers.rs  resume.rs  sessions.rs
src/components/: ProviderSidebar.tsx  SessionDetail.tsx  SessionList.tsx
src/hooks/: useTauri.ts
src/styles/: tailwind.css
src/types/: index.ts
