[package]
name = "casr-gui"
version = "0.1.0"
description = "Cross Agent Session Resumer GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "casr_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
casr = { path = "../../session-resumer" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1"
walkdir = "2"
